installation V6 c'est sensé être fini !!!!

--- a/creationpersonne.html
+++ b/creationpersonne.html
@@ -34,12 +34,12 @@
     <section class="image">
         <h2> <b>Création d'un administrateur</b></h2>
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_1.png">
+            <img src="assets/img/img-creationpersonne/img_1.png" alt="image d'une machine">
             <p>On ouvre le terminal.</p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_2.png">
+            <img src="assets/img/img-creationpersonne/img_2.png" alt="image d'une machine">
             <p> Avec la commande : <br><br>
             <b>sudo useradd admin_Gr02_Binome02 -p 1234</b>
             <br><br>
@@ -47,7 +47,7 @@
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_3.png">
+            <img src="assets/img/img-creationpersonne/img_3.png" alt="image d'une machine">
             <p> Avec la commande : <br><br>
                 <b>sudo cat /etc/passwd</b>
             <br><br>
@@ -55,31 +55,31 @@
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_4.png">
+            <img src="assets/img/img-creationpersonne/img_4.png" alt="image d'une machine">
             <p> Il s'affiche à la dernière ligne alors c'est bien le cas. </p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_5.png">
+            <img src="assets/img/img-creationpersonne/img_5.png" alt="image d'une machine">
             <p> Grâce à l'interface graphique, on peut en être complètement certain.
             <br> Il faut maintenant le transformer en administrateur.</p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_6.png">
+            <img src="assets/img/img-creationpersonne/img_6.png" alt="image d'une machine">
             <p> <p> Avec la commande : <br><br>
             <b>sudo usermod -aG sudo admin_Gr02_Binome02</b>
             <br><br> On change les droits de l'utilisateur en administarteur.</p>
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_7.png">
+            <img src="assets/img/img-creationpersonne/img_7.png" alt="image d'une machine">
             <p> On vérifie que tout fonctionne par l'interface graphique. </p>
         </article>
 
         <h2> <b>Création de deux utilisateurs</b></h2>
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_8.png">
+            <img src="assets/img/img-creationpersonne/img_8.png" alt="image d'une machine">
             <p> Avec la commande : <br><br>
                 <b>sudo useradd "nom"</b>
                 <br><br>
@@ -87,13 +87,13 @@
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_9.png">
+            <img src="assets/img/img-creationpersonne/img_9.png" alt="image d'une machine">
             <p> On vérifie que tout fonctionne par l'interface graphique.</p>
         </article>
 
         <h2><b>Création d'un groupe</b></h2>
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_10.png">
+            <img src="assets/img/img-creationpersonne/img_10.png" alt="image d'une machine">
             <p> Avec la commande : <br><br>
                 <b>sudo groupadd "nom"</b>
                 <br><br>
@@ -101,7 +101,7 @@
         </article>
 
         <article class="etapes">
-            <img src="assets/img/img-creationpersonne/img_11.png">
+            <img src="assets/img/img-creationpersonne/img_11.png" alt="image d'une machine">
             <p> On vérifie que tout fonctionne par l'interface graphique. </p>
         </article>
 
