--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           un meilleur rendement de leurs investissements.<br>
           Elle alimente également les services de cloud computing qui aident les organisations à gérer leur infrastructure plus
           efficacement. </p>
-        <img src="assets/img/img-acceuil/virtualisation2.jpg">
+        <img src="assets/img/img-acceuil/virtualisation2.jpg" alt="image d'une machine">
       </article>
 
 
@@ -102,7 +102,7 @@
 
       <h2> <strong> émulateur, simulateur et outil de virtualisation </strong> </h2>
       <article class="etapes">
-        <img src="assets/img/img-acceuil/emulateur.webp">
+        <img src="assets/img/img-acceuil/emulateur.webp" alt="image d'une machine">
         <p> <strong>EMULATEUR</strong><br><br>
           <strong>Définition :</strong><br> Un émulateur reproduit fidèlement le comportement et les fonctionnalités d'un système ou d'un matériel<br>
           sur une autre plateforme.<br><br>
@@ -113,7 +113,7 @@
       </article>
 
       <article class="etapes">
-        <img src="assets/img/img-acceuil/simulateur2.jpg">
+        <img src="assets/img/img-acceuil/simulateur2.jpg" alt="image d'une machine">
         <p> <strong>SIMULATEUR</strong><br><br>
           <strong>Définition :</strong><br> Un simulateur imite le comportement d’un système ou d’un processus dans un environnement contrôlé
           sans <br> reproduire nécessairement le matériel sous-jacent.
@@ -127,7 +127,7 @@
       </article>
 
       <article class="etapes">
-        <img src="assets/img/img-acceuil/outil.jpg">
+        <img src="assets/img/img-acceuil/outil.jpg" alt="image d'une machine">
         <p> <strong>OUTIL DE VIRTUALISATION</strong><br><br>
           <strong>Définition :</strong><br> La virtualisation consiste à créer une version logicielle d’un matériel ou d’un système d’exploitation,<br>
           appelée machine virtuelle, fonctionnant dans un environnement isolé.
