--- a/installation.html
+++ b/installation.html
@@ -35,7 +35,7 @@
         <a href="#a_propos" > SCROLL </a>
     </div>
     <div id="img_accueil">
-        <img src="assets/img/img-installation/Linux1.jpg" alt="" width="100%" height="auto"/>
+        <img src="assets/img/img-installation/Linux1.jpg" alt="image d'une machine" width="100%" height="auto"/>
     </div>
 
     <main>
@@ -54,7 +54,7 @@
                 Notre diagramme de Gantt :
             </p>
             <br>
-            <img src="assets/img/img-installation/diagramme.png">
+            <img src="assets/img/img-installation/diagramme.png" width="100%" height="auto" alt="image d'une machine">
         </section>
 
         <section id="actions">
