--- a/installationVM.html
+++ b/installationVM.html
@@ -44,59 +44,59 @@
                     Il sert à tester des choses sur son pc quand on n'est pas sûr du résultat obtenu <i>(exemple : tester des virus)</i>.
 
                 </p>
-                <img src="assets/img/img-installationVM/virtualbox-oracle.jpg">
+                <img src="assets/img/img-installationVM/virtualbox-oracle.jpg" alt="image d'une machine">
             </article>
 
             <h2> Etape de l'installation</h2>
             <article class="etapes">
-                <img src="assets/img/img-installationVM/souswindows.png">
+                <img src="assets/img/img-installationVM/souswindows.png" alt="image d'une machine">
                 <p> Aller sur le site officiel de VirtualBox : <i>https://www.virtualbox.org/</i> <br><br>
-                Sélectionner la platforme sur laquelle on travaille. Pour nous, cela sera Windows.</p>
+                Sélectionner la plateforme sur laquelle on travaille. Pour nous, cela sera Windows.</p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle1.png">
+                <img src="assets/img/img-installationVM/oracle1.png" alt="image d'une machine">
                 <p> Commencement du choix des paramètres de l'installation. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle2.png">
+                <img src="assets/img/img-installationVM/oracle2.png" alt="image d'une machine">
                 <p> Acceptation des termes du contract de la licence. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle3.png">
+                <img src="assets/img/img-installationVM/oracle3.png" alt="image d'une machine">
                 <p> Choix de la localisation du fichier.</p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle4.png">
+                <img src="assets/img/img-installationVM/oracle4.png" alt="image d'une machine">
                 <p> Avertissment d'un éventuel problème de réseau.<br>
                     (Nous n'en avons pas eu ) </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle5.png">
+                <img src="assets/img/img-installationVM/oracle5.png" alt="image d'une machine">
                 <p> Demande d'installation de Python Core et de win32api.</p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle6.png">
+                <img src="assets/img/img-installationVM/oracle6.png" alt="image d'une machine">
                 <p> Choix des installations personalisées. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle7.png">
+                <img src="assets/img/img-installationVM/oracle7.png" alt="image d'une machine">
                 <p> Confirmation de l'installation.</p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle8.png">
+                <img src="assets/img/img-installationVM/oracle8.png" alt="image d'une machine">
                 <p> Affichage du statut de l'installation. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-installationVM/oracle9.png">
+                <img src="assets/img/img-installationVM/oracle9.png" alt="image d'une machine">
                 <p> Affichage de la confirmation de la fin de l'installation. </p>
             </article>
 
