--- a/machine.html
+++ b/machine.html
@@ -62,12 +62,22 @@
   <h3>Avantages et Inconvénients </h3>
   <table>
     <tr>
-      <th>Cellule 1</th>
-      <th>Cellule 2</th>
+      <th>Avantages</th>
+      <th>Inconvénients</th>
     </tr>
     <tr>
-      <td>Cellule 3</td>
-      <td>Cellule 4</td>
+      <td>Diminution des dépenses liées au matériel </td>
+      <td>Si le matériel hôte subit une panne, toutes les VMs hébergées peuvent être impactées.</td>
+    </tr>
+    <tr>
+      <td>Facilité de création, de modification ou de suppression d’environnements virtuels</td>
+      <td>Les VMs partagent les ressources matérielles de l'hôte, ce qui peut entraîner des performances réduites si elles sont mal gérées.</td>
+    </tr>
+    <tr>
+      <td>Permet de simuler différents systèmes d'exploitation ou configurations réseau pour des tests avant déploiement.
+      </td>
+      <td>Certains logiciels ou périphériques peuvent ne pas fonctionner correctement dans un environnement virtualisé.
+      </td>
     </tr>
   </table>
 </div>
