--- a/créationVM.html
+++ b/créationVM.html
@@ -35,38 +35,38 @@
 
             <h2> <b>Etape de la création d'une Machine Virtuelle</b></h2>
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm1.png">
+                <img src="assets/img/img-creationVM/vm1.png" alt="image d'une machine">
                 <p> Cliquer sur l'îcone "Nouvelle". </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm2.png">
+                <img src="assets/img/img-creationVM/vm2.png" alt="image d'une machine">
                 <p> Choix du nom et du type. Pour nous, cela sera Linux. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm3.png">
+                <img src="assets/img/img-creationVM/vm3.png" alt="image d'une machine">
                 <p> Configuration de la taille de la RAM que l'on veut alloué à la machine virtuelle ( on le laisse par défaut ). </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm4.png">
+                <img src="assets/img/img-creationVM/vm4.png" alt="image d'une machine">
                 <p> Choix de possibilité de créer un disque dur <i>( exemple : si on veut stocker des fichiers )</i>. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm5.png">
+                <img src="assets/img/img-creationVM/vm5.png" alt="image d'une machine">
                 <p> Récapitulatif des propriétés de notre machine. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm6.png">
+                <img src="assets/img/img-creationVM/vm6.png" alt="image d'une machine">
                 <p> La machine est éteinte, il n'est pas encore possible de l'exécuter.
                 Pour se faire, il faut installer un système d'exploitation.</p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm7.png">
+                <img src="assets/img/img-creationVM/vm7.png" alt="image d'une machine">
                 <p> Avant cela, on appuie sur "configuration" et dans l'adaptateur1,
                 on change le mode d'accès réseau avec l' "Accès par pont". <br>
                 Elle permet d'avoir la même carte réseau que celle de notre PC et de
@@ -75,24 +75,24 @@
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm8.png">
+                <img src="assets/img/img-creationVM/vm8.png" alt="image d'une machine">
                 <p> Démarrage de la machine virtuelle. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm9.png">
+                <img src="assets/img/img-creationVM/vm9.png" alt="image d'une machine">
                 <p> Sélection d'un disque de démarrage. <br>
                 Il faut installer un ISO linux ( dans notre cas ) en allant sur le site
-                : <br> </br>https://lecrabeinfo.net/telecharger-les-iso-de-linux-mint-21.html </p>
+                : <br> https://lecrabeinfo.net/telecharger-les-iso-de-linux-mint-21.html </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm10.png">
+                <img src="assets/img/img-creationVM/vm10.png" alt="image d'une machine">
                 <p> Sélection du fichier précédemment installé. </p>
             </article>
 
             <article class="etapes">
-                <img src="assets/img/img-creationVM/vm11.png">
+                <img src="assets/img/img-creationVM/vm11.png" alt="image d'une machine">
                 <p> La marchine virtuelle s'allume !  </p>
             </article>
 
