--- a/placement.html
+++ b/placement.html
@@ -119,20 +119,35 @@
         </article>
 
         <article class="etapes">
+            <img src="assets/img/img-placement/img_14.png" alt="image d'une machine">
+            <p> <br>Commande : <br>
+                <br><b>sudo vi apache2.conf</b><br>
+                Aller dans apache2.conf et rajouter la balise directory la ou il y a le curseur</p>
+        </article>
+
+        <article class="etapes">
             <img src="assets/img/img-placement/img_13.png" alt="image d'une machine">
+            <p> rajouter la balise directory au niveau du curseur, vous pouvez faire un copier coller et changer le chemin</p>
         </article>
 
         <article class="etapes">
             <img src="assets/img/img-placement/img_14.png" alt="image d'une machine">
+
         </article>
 
         <article class="etapes">
             <img src="assets/img/img-placement/img_15.png" alt="image d'une machine">
+            <p>Au niveau du DocumentRoot mettre le chemin vers  le srv et votre lien </p>
         </article>
 
         <article class="etapes">
             <img src="assets/img/img-placement/img_16.png" alt="image d'une machine">
             <p> Enlever les # </p>
+        </article>
+
+        <article class="etapes">
+            <img src="assets/img/img-placement/img_17.png" alt="image d'une machine">
+            <p>Maintenant on a cette page test qu’on a crée au tout debut </p>
         </article>
 
 
